--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "dev": "bun --watch src/index.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/bun": "latest",
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.6",
