--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/bun": "latest",
     "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/validator": "^13.15.10"
@@ -22,6 +23,7 @@
     "bcryptjs": "^3.0.3",
     "chalk": "^5.6.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
